--- a/Hw0/style.css
+++ b/Hw0/style.css
@@ -50,3 +50,7 @@ text-decoration: underline;
         {
         font-size: large;    
         }   
+    a
+        {
+        color: blue;
+        }
