--- a/Hw0/style.css
+++ b/Hw0/style.css
@@ -54,3 +54,7 @@ text-decoration: underline;
         {
         color: rgb(182, 31, 31);
         }
+
+    a:hover {
+            background-color: yellow;
+          }
