--- a/Hw0/style.css
+++ b/Hw0/style.css
@@ -56,5 +56,5 @@ text-decoration: underline;
         }
 
     a:hover {
-            background-color: yellow;
+            background-color: black;
           }
