--- a/Hw0/style.css
+++ b/Hw0/style.css
@@ -60,3 +60,10 @@ a:hover
         {
             background-color: yellow;
           }
+
+#first { 
+       
+        background-color: black;
+        color: azure;
+        }
+    
