--- a/Hw0/style.css
+++ b/Hw0/style.css
@@ -65,4 +65,10 @@ a:hover
        
         background-color: black;
         }
+
+ @media only screen and (max-width: 600px) {
+    body {
+        background-color: lightblue;
+        }
+          }
     
